--- a/app.yaml
+++ b/app.yaml
@@ -25,9 +25,10 @@ libraries:
 - name: jinja2
   version: "latest"
 - name: webapp2
-  version: "2.5.1"
+  version: "latest"
 
 handlers:
 
-- url: /api/.*
+- url: /.*
   script: gfw.api.handlers
+
