fix email sub regex

--- a/app.yaml
+++ b/app.yaml
@@ -16,7 +16,7 @@
 # 51 Franklin Street, Fifth Floor, Boston, MA 02110-1301 USA.
 
 application: gfw-apis
-version: v1
+version: wip
 runtime: python27
 threadsafe: true
 api_version: 1
@@ -32,9 +32,12 @@ libraries:
 
 handlers:
 
-- url: /_ah/mail/sub\+.*@gfw-apis\.appspotmail\.com
+- url: /_ah/mail/sub.*
   script: gfw.pubsub.handlers
-  login: admin  
+  login: admin
+# - url: /_ah/mail/sub\+.*@gfw-apis\.appspotmail\.com
+#   script: gfw.pubsub.handlers
+#   login: admin  
 
 - url: /.*
   script: gfw.api.handlers
