initial backend arch for hansen

--- a/app.yaml
+++ b/app.yaml
@@ -42,6 +42,9 @@ handlers:
   script: gfw.pubsub.handlers
   login: admin
 
+- url: /backend/datasets/hansen.*
+  script: gfw.hansen.handlers
+
 - url: /.*
   script: gfw.api.handlers
 
