wip: simplify, no backends or sockets, dl redirect to cdb

--- a/backends.yaml
+++ b/backends.yaml
@@ -1,6 +1,6 @@
-backends:
-- name: download
-  start: download.py
-  instances: 10
-  class: B4_1G
-  options: dynamic, public
+# backends:
+# - name: download
+#   start: download.py
+#   instances: 10
+#   class: B4_1G
+#   options: dynamic, public
