--- a/app.yaml
+++ b/app.yaml
@@ -25,9 +25,6 @@ inbound_services:
 - mail
 # - warmup
 
-env_variables:
-  GAE_USE_SOCKETS_HTTPLIB: 'yup'
-
 libraries:
 - name: jinja2
   version: "latest"
@@ -48,16 +45,13 @@ handlers:
   script: gfw.pubsub.handlers
   login: admin
 
-- url: /backend/datasets/hansen.*
-  script: gfw.hansen.handlers
-
 # Download handler:
 - url: /datasets/(imazon|forma|modis).(shp|geojson|kml|svg|csv)
   script: download.handlers
 
-# Backend download handler:
-- url: /backend/datasets/(imazon|forma|modis).(shp|geojson|kml|svg|csv)
-  script: download.handlers
+# Analysis handler:
+- url: /datasets/(imazon|forma|modis)
+  script: analysis.handlers
 
 # Monitor
 - url: /monitor.*
